[gd_scene load_steps=10 format=3 uid="uid://dluav450y5end"]

[ext_resource type="Script" uid="uid://chnpph1o635wx" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://cha7i02mpbwcm" path="res://Assets/Particles/spark_particles.tscn" id="2_cvnsp"]
[ext_resource type="PackedScene" uid="uid://bbrqxjgoq3m2f" path="res://Assets/Particles/smoke_particles.tscn" id="3_6t5aa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6t5aa"]
albedo_color = Color(1, 0.45431453, 0.6136158, 1)

[sub_resource type="SphereMesh" id="SphereMesh_f60y1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v0iea"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cvnsp"]
material = SubResource("StandardMaterial3D_v0iea")

[sub_resource type="SphereShape3D" id="SphereShape3D_v0iea"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cvnsp"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_v0iea")
jump_velocity = 5.5
hurt_material = SubResource("StandardMaterial3D_6t5aa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_f60y1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.60928154, 0, 0, 0, 0.1848185, 0, 0, 0, 0.41658568, 0, 0.17463928, 0.37266326)
mesh = SubResource("BoxMesh_cvnsp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_v0iea")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_cvnsp")

[node name="Invulnerability Timer" type="Timer" parent="."]
one_shot = true

[node name="Steps Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Ground Check Raycast" type="RayCast3D" parent="."]
enabled = false

[node name="Hats" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Spark Particles" parent="." instance=ExtResource("2_cvnsp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55077934, 0)

[node name="Smoke Particles" parent="." instance=ExtResource("3_6t5aa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.22495237, -0.1275183)
scale_amount_min = 0.1

[connection signal="body_entered" from="Area3D" to="." method="_on_shockwave_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_shockwave_exited"]
[connection signal="timeout" from="Invulnerability Timer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="Steps Timer" to="." method="_on_steps_timer_timeout"]
